feat: simple blog func and auth func
